--- a/demos/vanilla-ts/index.html
+++ b/demos/vanilla-ts/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>AiEditor Demo</title>
+    <title>JSTEditor Demo</title>
     <script>
         let isDark = false;
         function dark() {
             if (!isDark) {
                 document.body.style.background = "#1a1b1e"
                 document.querySelector("#title").style.color = "#eee"
-                document.querySelector("#aiEditor").classList.remove("aie-theme-light");
-                document.querySelector("#aiEditor").classList.add("aie-theme-dark");
+                document.querySelector("#JSTEditor").classList.remove("aie-theme-light");
+                document.querySelector("#JSTEditor").classList.add("aie-theme-dark");
             } else {
                 document.body.style.background = ""
                 document.querySelector("#title").style.color = ""
-                document.querySelector("#aiEditor").classList.remove("aie-theme-dark");
-                document.querySelector("#aiEditor").classList.add("aie-theme-light");
+                document.querySelector("#JSTEditor").classList.remove("aie-theme-dark");
+                document.querySelector("#JSTEditor").classList.add("aie-theme-light");
             }
             isDark = !isDark;
         }
@@ -24,10 +24,10 @@
         function changeLang(){
             const lang = localStorage.getItem("lang");
             if (!lang || lang === "zh"){
-                aiEditor.changeLang("en");
+                JSTEditor.changeLang("en");
                 localStorage.setItem("lang","en");
             }else {
-                aiEditor.changeLang("zh");
+                JSTEditor.changeLang("zh");
                 localStorage.setItem("lang","zh");
             }
         }
@@ -45,14 +45,14 @@
 
 
 <div style="padding: 10px 20px;font-size: 30px" id="title">
-    AiEditor，一个面向 AI 的下一代富文本编辑器。
-    <a href="https://gitee.com/aieditor-team/aieditor" target="_blank">获取源码</a>
-    <a href="https://aieditor.dev" target="_blank">访问官网</a>
+    JSTEditor，一个面向 AI 的下一代富文本编辑器。
+    <a href="https://gitee.com/jsteditor-team/jsteditor" target="_blank">获取源码</a>
+    <a href="https://jsteditor.dev" target="_blank">访问官网</a>
     <button onclick="dark()">切换主题</button>
     <button onclick="changeLang()">切换语言</button>
 </div>
 
-<div id="aiEditor" style="height: 550px;  margin: 20px"></div>
+<div id="JSTEditor" style="height: 550px;  margin: 20px"></div>
 <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
